testsuite/tests/th/T18740d.stderr

T18740d.hs:17:7: error:
    • Illegal variable name: ‘Bool’
      When splicing a TH expression: GHC.Types.Bool
    • In the untyped splice: $(return (VarE ''Bool))
